sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value getNombrevaleurs
		for (i<-getNombrevaleurs()-2 to 0 by -1){
                        ^AlgCocktailSort1:17: error: type mismatch;
 found   : Unit
 required: Boolean
	}while(f=true)
                ^